5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1715_3069.log
== SUBMITION (2019-05-02 17:19:21) 
-- CODE:
nomeAtk = input()
dado1 = float(input())
dado2 = float(input())

if(not((valor>=1 and valor<=8) and (nomeAtk=='FURIA' or nomeAtk=='GRITO' or nomeAtk='TOQUE'))):
	if(nomeAtk=='FURIA'):
		DANO = 10 + dado1 + dado2
	elif(nomeAtk=='GRITO'):
		DANO = 6 + dado1 + dado2
	else:
		DANO = (dado1 + dado2)**2
	print(DANO)
else:
	print("Entrada Ivalida
	
-- EXECUTION TIME:
0.281406
-- ERROR:
  File "/home/codebench/codes/1715/3069/main.py", line 5
    if(not((valor>=1 and valor<=8) and (nomeAtk=='FURIA' or nomeAtk=='GRITO' or nomeAtk='TOQUE'))):
                                                                                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:19:23) 
-- CODE:
nomeAtk = input()
dado1 = float(input())
dado2 = float(input())

if(not((valor>=1 and valor<=8) and (nomeAtk=='FURIA' or nomeAtk=='GRITO' or nomeAtk='TOQUE'))):
	if(nomeAtk=='FURIA'):
		DANO = 10 + dado1 + dado2
	elif(nomeAtk=='GRITO'):
		DANO = 6 + dado1 + dado2
	else:
		DANO = (dado1 + dado2)**2
	print(DANO)
else:
	print("Entrada Ivalida
	
-- ERROR:
File "XXXX", line 5
    if(not((valor>=1 and valor<=8) and (nomeAtk=='FURIA' or nomeAtk=='GRITO' or nomeAtk='TOQUE'))):
                                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:21:50) 
-- CODE:
nomeAtk = input()
dado1 = float(input())
dado2 = float(input())

if(not((valor>=1 and valor<=8) and (nomeAtk=='FURIA' or nomeAtk=='GRITO' or nomeAtk='TOQUE'))):
	if(not(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO")):
		if(nomeAtk=='FURIA'):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=='GRITO'):
			DANO = 6 + dado1 + dado2
		else:
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Ivalida
	
-- EXECUTION TIME:
0.169275
-- ERROR:
  File "/home/codebench/codes/1715/3069/main.py", line 5
    if(not((valor>=1 and valor<=8) and (nomeAtk=='FURIA' or nomeAtk=='GRITO' or nomeAtk='TOQUE'))):
                                                                                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:22:09) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(not((valor>=1 and valor<=8) and (nomeAtk=='FURIA' or nomeAtk=='GRITO' or nomeAtk='TOQUE'))):
	if(not(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO")):
		if(nomeAtk=='FURIA'):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=='GRITO'):
			DANO = 6 + dado1 + dado2
		else:
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Ivalida
	
-- EXECUTION TIME:
0.189755
-- ERROR:
  File "/home/codebench/codes/1715/3069/main.py", line 5
    if(not((valor>=1 and valor<=8) and (nomeAtk=='FURIA' or nomeAtk=='GRITO' or nomeAtk='TOQUE'))):
                                                                                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:22:12) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(not((valor>=1 and valor<=8) and (nomeAtk=='FURIA' or nomeAtk=='GRITO' or nomeAtk='TOQUE'))):
	if(not(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO")):
		if(nomeAtk=='FURIA'):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=='GRITO'):
			DANO = 6 + dado1 + dado2
		else:
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Ivalida
	
-- ERROR:
File "XXXX", line 5
    if(not((valor>=1 and valor<=8) and (nomeAtk=='FURIA' or nomeAtk=='GRITO' or nomeAtk='TOQUE'))):
                                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:22:27) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(not((valor>=1 and valor<=8))):
	if(not(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO")):
		if(nomeAtk=='FURIA'):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=='GRITO'):
			DANO = 6 + dado1 + dado2
		else:
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Ivalida
	
-- EXECUTION TIME:
0.18961
-- ERROR:
  File "/home/codebench/codes/1715/3069/main.py", line 17
    print("Entrada Ivalida
                         ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:22:29) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(not((valor>=1 and valor<=8))):
	if(not(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO")):
		if(nomeAtk=='FURIA'):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=='GRITO'):
			DANO = 6 + dado1 + dado2
		else:
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Ivalida
	
-- ERROR:
File "XXXX", line 17
    print("Entrada Ivalida
                         ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:22:34) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(not((valor>=1 and valor<=8))):
	if(not(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO")):
		if(nomeAtk=='FURIA'):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=='GRITO'):
			DANO = 6 + dado1 + dado2
		else:
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Ivalida)
	
-- EXECUTION TIME:
0.148177
-- ERROR:
  File "/home/codebench/codes/1715/3069/main.py", line 17
    print("Entrada Ivalida)
                          ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:22:37) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(not((valor>=1 and valor<=8))):
	if(not(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO")):
		if(nomeAtk=='FURIA'):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=='GRITO'):
			DANO = 6 + dado1 + dado2
		else:
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Ivalida)
	
-- ERROR:
File "XXXX", line 17
    print("Entrada Ivalida)
                          ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:22:45) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(not((valor>=1 and valor<=8))):
	if(not(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO")):
		if(nomeAtk=='FURIA'):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=='GRITO'):
			DANO = 6 + dado1 + dado2
		else:
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Invalida")
	
-- EXECUTION TIME:
0.213027
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1715/3069/main.py", line 5, in <module>
    if(not((valor>=1 and valor<=8))):
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:22:47) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(not((valor>=1 and valor<=8))):
	if(not(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO")):
		if(nomeAtk=='FURIA'):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=='GRITO'):
			DANO = 6 + dado1 + dado2
		else:
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Invalida")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(not((valor>=1 and valor<=8))):
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:22:50) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(not((valor>=1 and valor<=8))):
	if(not(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO")):
		if(nomeAtk=='FURIA'):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=='GRITO'):
			DANO = 6 + dado1 + dado2
		else:
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Invalida")
	
-- EXECUTION TIME:
0.205388
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1715/3069/main.py", line 5, in <module>
    if(not((valor>=1 and valor<=8))):
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:22:51) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(not((valor>=1 and valor<=8))):
	if(not(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO")):
		if(nomeAtk=='FURIA'):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=='GRITO'):
			DANO = 6 + dado1 + dado2
		else:
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Invalida")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(not((valor>=1 and valor<=8))):
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:23:42) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(not((valor>=1 and valor<=8))):
	if(not(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO")):
		if(nomeAtk=="FURIA"):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=="GRITO"):
			DANO = 6 + dado1 + dado2
		else:
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Invalida")
	
-- EXECUTION TIME:
0.23549
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1715/3069/main.py", line 5, in <module>
    if(not((valor>=1 and valor<=8))):
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:23:44) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(not((valor>=1 and valor<=8))):
	if(not(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO")):
		if(nomeAtk=="FURIA"):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=="GRITO"):
			DANO = 6 + dado1 + dado2
		else:
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Invalida")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(not((valor>=1 and valor<=8))):
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:24:24) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(not(valor>=1 and valor<=8)):
	if(not(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO")):
		if(nomeAtk=="FURIA"):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=="GRITO"):
			DANO = 6 + dado1 + dado2
		else:
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Invalida")
	
-- EXECUTION TIME:
0.204664
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1715/3069/main.py", line 5, in <module>
    if(not(valor>=1 and valor<=8)):
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:25:13) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(not(dado1>=1 and dado2>=1 and dado1<=8 and dado2<=8)):
	if(not(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO")):
		if(nomeAtk=="FURIA"):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=="GRITO"):
			DANO = 6 + dado1 + dado2
		else:
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Invalida")
	
-- EXECUTION TIME:
0.163351
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
Entrada Invalida
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
Entrada Invalida
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
Entrada Invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:25:27) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(not(dado1>=1 and dado2>=1 and dado1<=8 and dado2<=8)):
	if(not(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO")):
		if(nomeAtk=="FURIA"):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=="GRITO"):
			DANO = 6 + dado1 + dado2
		else:
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Invalida")
	
-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:26:40) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(not(dado1>=1 and dado2>=1 and dado1<=8 and dado2<=8)):
	if(not(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO")):
		if(nomeAtk=="FURIA"):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=="GRITO"):
			DANO = 6 + dado1 + dado2
		else:
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Invalida")
	
-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:26:54) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(not(dado1>=1 and dado2>=1 and dado1<=8 and dado2<=8)):
	if(not(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO")):
		if(nomeAtk=="FURIA"):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=="GRITO"):
			DANO = 6 + dado1 + dado2
		else:
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Invalida")
	
-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:27:07) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(not(dado1>=1 and dado2>=1 and dado1<=8 and dado2<=8)):
	if(not(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO")):
		if(nomeAtk=="FURIA"):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=="GRITO"):
			DANO = 6 + dado1 + dado2
		else:
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Invalida")
	
-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:27:19) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(not(dado1>=1 and dado2>=1 and dado1<=8 and dado2<=8)):
	if(not(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO")):
		if(nomeAtk=="FURIA"):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=="GRITO"):
			DANO = 6 + dado1 + dado2
		else:
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Invalida")
	
-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:27:50) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(dado1>=1 and dado2>=1 and dado1<=8 and dado2<=8):
	if(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO"):
		if(nomeAtk=="FURIA"):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=="GRITO"):
			DANO = 6 + dado1 + dado2
		else:
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Invalida")
	
-- EXECUTION TIME:
0.143116
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
Entrada Invalida
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:30:01) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(dado1>=1 and dado2>=1 and dado1<=8 and dado2<=8):
	if(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO"):
		if(nomeAtk=="FURIA"):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=="GRITO"):
			DANO = 6 + dado1 + dado2
		elif(nomeAtk=="TOQUE")
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Invalida")
	
-- EXECUTION TIME:
0.231192
-- ERROR:
  File "/home/codebench/codes/1715/3069/main.py", line 11
    elif(nomeAtk=="TOQUE")
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:30:04) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(dado1>=1 and dado2>=1 and dado1<=8 and dado2<=8):
	if(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO"):
		if(nomeAtk=="FURIA"):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=="GRITO"):
			DANO = 6 + dado1 + dado2
		elif(nomeAtk=="TOQUE")
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Invalida")
	
-- EXECUTION TIME:
0.125614
-- ERROR:
  File "/home/codebench/codes/1715/3069/main.py", line 11
    elif(nomeAtk=="TOQUE")
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:30:05) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(dado1>=1 and dado2>=1 and dado1<=8 and dado2<=8):
	if(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO"):
		if(nomeAtk=="FURIA"):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=="GRITO"):
			DANO = 6 + dado1 + dado2
		elif(nomeAtk=="TOQUE")
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Invalida")
	
-- ERROR:
File "XXXX", line 11
    elif(nomeAtk=="TOQUE")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:30:11) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(dado1>=1 and dado2>=1 and dado1<=8 and dado2<=8):
	if(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO"):
		if(nomeAtk=="FURIA"):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=="GRITO"):
			DANO = 6 + dado1 + dado2
		elif(nomeAtk=="TOQUE")
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Invalida")
	
-- EXECUTION TIME:
0.156755
-- ERROR:
  File "/home/codebench/codes/1715/3069/main.py", line 11
    elif(nomeAtk=="TOQUE")
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:30:16) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(dado1>=1 and dado2>=1 and dado1<=8 and dado2<=8):
	if(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO"):
		if(nomeAtk=="FURIA"):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=="GRITO"):
			DANO = 6 + dado1 + dado2
		elif(nomeAtk=="TOQUE"):
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Invalida")
	
-- EXECUTION TIME:
0.175347
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
Entrada Invalida
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:30:19) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(dado1>=1 and dado2>=1 and dado1<=8 and dado2<=8):
	if(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO"):
		if(nomeAtk=="FURIA"):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=="GRITO"):
			DANO = 6 + dado1 + dado2
		elif(nomeAtk=="TOQUE"):
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Invalida")
	
-- EXECUTION TIME:
0.14665
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
Entrada Invalida
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:30:20) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(dado1>=1 and dado2>=1 and dado1<=8 and dado2<=8):
	if(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO"):
		if(nomeAtk=="FURIA"):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=="GRITO"):
			DANO = 6 + dado1 + dado2
		elif(nomeAtk=="TOQUE"):
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Invalida")
	
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:30:36) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(dado1>=1 and dado2>=1 and dado1<=8 and dado2<=8):
	if(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO"):
		if(nomeAtk=="FURIA"):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=="GRITO"):
			DANO = 6 + dado1 + dado2
		elif(nomeAtk=="TOQUE"):
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Invalida")
	
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:30:46) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(dado1>=1 and dado2>=1 and dado1<=8 and dado2<=8):
	if(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO"):
		if(nomeAtk=="FURIA"):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=="GRITO"):
			DANO = 6 + dado1 + dado2
		elif(nomeAtk=="TOQUE"):
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Invalida")
	
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:30:59) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(dado1>=1 and dado2>=1 and dado1<=8 and dado2<=8):
	if(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO"):
		if(nomeAtk=="FURIA"):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=="GRITO"):
			DANO = 6 + dado1 + dado2
		elif(nomeAtk=="TOQUE"):
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada Invalida")
else:
	print("Entrada Invalida")
	
-- EXECUTION TIME:
0.201652
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
Entrada Invalida
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:31:16) 
-- CODE:
nomeAtk = input()
dado1 = int(input())
dado2 = int(input())

if(dado1>=1 and dado2>=1 and dado1<=8 and dado2<=8):
	if(nomeAtk=="FURIA" or nomeAtk=="TOQUE" or nomeAtk=="GRITO"):
		if(nomeAtk=="FURIA"):
			DANO = 10 + dado1 + dado2
		elif(nomeAtk=="GRITO"):
			DANO = 6 + dado1 + dado2
		elif(nomeAtk=="TOQUE"):
			DANO = (dado1 + dado2)**2
		print(DANO)
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
	
-- EXECUTION TIME:
0.185028
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
